# embedded_bedrock

./: Cargo.toml  README.md
bedrock/: Cargo.toml
bedrock/src/: main.rs  nm.rs
bedrock_build/: Cargo.toml
bedrock_build/src/: build_info.rs  lib.rs
bedrock_build_info/: Cargo.toml  build_info.ww
bedrock_build_info/src/: lib.rs  traits.rs
bedrock_cli/: Cargo.toml
bedrock_template/: Cargo.toml  build.rs  cargo-generate.toml  pre-script.rhai
bedrock_template/bootloader/: Cargo.toml  README.md  build.rs
bedrock_template/bootloader/src/: main.rs
bedrock_template/examples/: blinky.rs
bedrock_template/src/: build_info.rs  init.rs  init_ram.rs  main.rs
book/: issues.md
cnt/: Cargo.toml  README.md  build.rs  cnt.x
cnt/src/: consts.rs  lib.rs
cnt_macro/: Cargo.toml  README.md
cnt_macro/src/: cnt_if.rs  construct.rs  input_args.rs  lib.rs  symbol.rs
fw_registry/: Cargo.toml
