[package]
name = "bedrock_build_info"
version = "0.1.0"
edition = "2024"

[dependencies]
wire_weaver = { version = "0.4.0", default-features = false }
ww_date_time = { path = "../../ww_stdlib/ww_date_time", default-features = false, features = [] }
ww_version = { version = "0.1.1", default-features = false }
#ww_client_server = { version = "0.1.0", default-features = false }
crc = { version = "3.3", optional = true }
#tracing = { version = "0.1", optional = true }
#qdhex = "0.1"

[dev-dependencies]
hex-literal = "1"
#tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["std", "tracing-extended"]
std = ["wire_weaver/std", "dep:crc", "ww_date_time/std", "ww_version/std"]
semver = ["ww_version/semver"]
chrono = ["ww_date_time/chrono"]

tracing-extended = []
defmt-extended = []