[package]
name = "cnt_macro"
version = "0.1.0"
edition = "2024"
description = "RAM counters macro for microcontrollers, when logging is not an option"
license = "MIT"
repository = "https://github.com/romixlab/embedded_bedrock"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"